--- a/bestseller.html
+++ b/bestseller.html
@@ -50,116 +50,129 @@
         </li>
           
       </ul>
-      <div class="sort">
-<b>Sort : </b>
-<select name="sort" style="height:50px; width:250px;">
-    <option value="">--Select--</option>
-    <option value="priceasc"  >Price : Low to High</option>
-    <option value="pricedesc"  >Price : High to Low</option>
-    <option value="letterasc"  >Letter : A to Z</option>
-    <option value="letterdesc"  >Letter : Z to A</option>
-</select>
-      </div>
+      <div class="filtr">
+        <b>Filter by price : </b>
+        <a href="#" class="fill" data-filter="all">All</a>
+        <a href="#" class="fill" data-filter="two">100-300</a>
+        <a href="#" class="fill" data-filter="three">300-500</a>
+        <a href="#" class="fill" data-filter="five">500-1200 </a>
+              </div>
 <h1 ><b>Bestseller : </b></h1>
 <div class="book1">
-<div class="book">
+<div class="book five">
   <img src="atomic habits.jpg" alt="..." width="200px" height="300px">
   <br><h3>Atomic habits</h3>
     <span class="rupee">&#8377;559</span>
     <span class="rupee1">799</span>
+    <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book three">
   <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
   <br><h3>it ends with us</h3>
     <span class="rupee">&#8377;379</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book three">
   <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
   <br><h3>ikigai</h3>
     <span class="rupee">&#8377;385</span>
     <span class="rupee1">550</span>
+    <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book three">
   <img src="dad.webp" alt="..." width="200px" height="300px">
   <br><h3>Rich dad poor dad</h3>
     <span class="rupee">&#8377;419</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
-  <img src="destiny.jpg" alt="..."width="200px" height="300px">
+<div class="book three">
+  <img src="destiny.jpg " alt="..."width="200px" height="300px">
   <br><h3>Discipline is destiny</h3>
     <span class="rupee">&#8377;467</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
 </div>
-  <div class="book">
+  <div class="book two">
     <img src="mountain.webp"  alt="..." width="200px" height="300px">
     <br><h3>The mountain is you</h3>
     <span class="rupee">&#8377;169</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="it starts with us.webp" alt="..." width="200px" height="300px">
     <br><h3>It Starts with Us</h3>
     <span class="rupee">&#8377;489</span>
     <span class="rupee1">699</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="hooked.webp" alt="..." width="200px" height="300px">
     <br><h3>Hooked: How to Build Habit-Forming Products</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">359</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
-    <span class="rupee1">1679</span></h3>
+    <span class="rupee1">1679</span>
+    
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
    <center> <button class="btn btn-outline-danger view"> view more</button></center>
   
-  <div class="book h">
+  <div class="book h three">
     <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
     <br><h3>Ikigai</h3>
       <span class="rupee">&#8377;385</span>
       <span class="rupee1">550</span>
+      <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="lanka.jpeg" alt="..." width="200px" height="300px">
     <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="money.jpg"  alt="..." width="200px" height="300px">
     <br><h3>The psychology of money</h3>
     <span class="rupee">&#8377;219</span>
     <span class="rupee1">399</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="alchemist.jpg" alt="..." width="200px" height="300px">
     <br><h3>The alchemist</h3>
     <span class="rupee">&#8377;259</span>
     <span class="rupee1">399</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="monk.jpg" alt="..."width="200px" height="300px">
     <br><h3>Think like a monk</h3>
     <span class="rupee">&#8377;329</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
   </div>
   <div class="ad">
     <h2><b>For Suggestions click the link given:</b></h2>
-    <button class="btn1 btn btn-outline-danger" onclick="openForm()">Button</button>
+    <button class="btn1 btn btn-outline-danger open">Button</button>
   </div>
-  <div class="form-popup" id="myForm">
+  <div class="form-popup popup" id="myForm">
     <form  class="form-container">
       <h2>Suggestions:</h2>
       <br>
@@ -170,9 +183,10 @@
       <input type="text" placeholder="Enter name" name="auther" required>
       <br><br>
       <button type="submit" class="btn btn-outline-danger " >Submit</button>
-      <button type="button" class="btn btn-outline-danger " onclick="closeForm()">Cancel</button>
+      <button type="button" class="btn btn-outline-danger close" >Cancel</button>
     </form>
   </div>
+  
   
   <div class="footer">
     <footer class="py-3 my">
@@ -186,31 +200,8 @@
       <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
     </footer>
   </div>
-  <script>
-  $(document).ready(function () {
- 
- $(".open").click(function () {
-  $(".popup").fadeIn(500);
-});
-
-$(".close").click(function () {
-  $(".popup").fadeOut(500);
   
-});
-});
-$(document).ready(function(){
-            $("form").submit(function(){
-                alert("your response is recorded");
-            });
-        });
-
-$(document).ready(function(){
-  $(".h").hide();
-  $(".view").click(function(){
-    $(".h").show();
-    $(this).hide();
-  })
-});
-  </script>
 </body>
+
+<script src="java.js" crossorigin="anonymous"></script>
 </html>
