--- a/new arrivals.html
+++ b/new arrivals.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="jquery-3.6.1.js"></script>
   <link rel="stylesheet" href="css.css">
+  
 </head>
 
 <body>
@@ -48,116 +49,127 @@
         </li>
           
       </ul>
-      <div class="sort">
-        <b>Sort : </b>
-        <select name="sort" style="height:50px; width:250px;">
-            <option value="">--Select--</option>
-            <option value="priceasc"  >Price : Low to High</option>
-            <option value="pricedesc"  >Price : High to Low</option>
-            <option value="letterasc"  >Letter : A to Z</option>
-            <option value="letterdesc"  >Letter : Z to A</option>
-        </select>
+      <div class="filtr">
+        <b>Filter by price : </b>
+        <a href="#" class="fill" data-filter="all">All</a>
+        <a href="#" class="fill" data-filter="two">200-300</a>
+        <a href="#" class="fill" data-filter="three">300-500</a>
+        <a href="#" class="fill" data-filter="five">500-1200 </a>
               </div>
 <h1><b>New Arrivals : </b></h1>
 <div class="book1">
-  <ul>
-<div class="book">
+<div class="book three">
   <img src="next in line.jpg" alt="..." width="200px" height="300px">
   <br><h3>Next in Line</h3>
   <span class="rupee">&#8377;389</span>
   <span class="rupee1">499</span>
+  <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book three">
   <img src="it starts with us.webp" alt="..." width="200px" height="300px">
   <br><h3>It Starts with Us</h3>
   <span class="rupee">&#8377;489</span>
   <span class="rupee1">699</span>
+  <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book two">
   <img src="life changing quotes.jpg"  alt="..." width="200px" height="300px">
   <br><h3>Life Changing Quotes</h3>
   <span class="rupee">&#8377;284</span>
   <span class="rupee1">299</span>
+  <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book three">
   <img src="lanka.jpeg" alt="..." width="200px" height="300px">
   <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
+  <div class="addcart"><a >Add to Cart</a></div>
 </div>
-<div class="book">
+<div class="book two">
   <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
     <span class="rupee1">1679</span></h3>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="shiva trilogy.jpg" alt="..." width="200px" height="300px">
     <br><h3>The shivas trilogy Boxset of 3 books</h3>
     <span class="rupee">&#8377;932</span>
     <span class="rupee1">1295</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="wrong place.webp"  alt="..." width="200px" height="300px">
     <br><h3>Wrong Place wrong time</h3>
     <span class="rupee">&#8377;299</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="random.webp" alt="..." width="200px" height="300px">
     <br><h3>A random walk down wall street</h3>
     <span class="rupee">&#8377;437</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="do hard things first.webp" alt="..."width="200px" height="300px">
     <br><h3>Do the hard things first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <center> <button class="btn btn-outline-danger view"> view more</button></center>
-  <div class="book h">
+  <div class="book h 200">
     <img src="profit first.webp" alt="..." width="200px" height="300px">
     <br><h3>Profit first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="finding ashly.webp" alt="..." width="200px" height="300px">
     <br><h3>Finding Ashley</h3>
     <span class="rupee">&#8377;383</span>
     <span class="rupee1">525</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="inside.webp"  alt="..." width="200px" height="300px">
     <br><h3>Inside out</h3>
     <span class="rupee">&#8377;482</span>
     <span class="rupee1">699</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="diary.webp" alt="..." width="200px" height="300px">
     <br><h3>Diary of a wimpy kid book 17</h3>
     <span class="rupee">&#8377;350</span>
     <span class="rupee1">550</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="wisdom.webp" alt="..."width="200px" height="300px">
     <br><h3>The wisdom Bridge</h3>
     <span class="rupee">&#8377;309</span>
     <span class="rupee1">399</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
   </div>
   <div class="ad">
     <h2><b>For Suggestions click the link given:</b></h2>
-    <button class="btn1 btn btn-outline-danger" onclick="openForm()">Button</button>
+    <button class="btn1 btn btn-outline-danger open">Button</button>
   </div>
-  <div class="form-popup" id="myForm">
+  <div class="form-popup popup" id="myForm">
     <form  class="form-container">
       <h2>Suggestions:</h2>
       <br>
@@ -168,7 +180,7 @@
       <input type="text" placeholder="Enter name" name="auther" required>
       <br><br>
       <button type="submit" class="btn btn-outline-danger " >Submit</button>
-      <button type="button" class="btn btn-outline-danger " onclick="closeForm()">Cancel</button>
+      <button type="button" class="btn btn-outline-danger close" >Cancel</button>
     </form>
   </div>
   
@@ -184,32 +196,8 @@
       <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
     </footer>
   </div>
-  <script>
-  $(document).ready(function () {
- 
- $(".open").click(function () {
-  $(".popup").fadeIn(500);
-});
 
-$(".close").click(function () {
-  $(".popup").fadeOut(500);
-  
-});
-});
-$(document).ready(function(){
-            $("form").submit(function(){
-                alert("your response is recorded");
-            });
-        });
-  </script>
-  <script>
-    $(document).ready(function(){
-  $(".h").hide();
-  $(".view").click(function(){
-    $(".h").show();
-    $(this).hide();
-  })
-});
-</script>
 </body>
+<script src="java.js" crossorigin="anonymous"></script>
+
 </html>
