--- a/fiction.html
+++ b/fiction.html
@@ -50,114 +50,127 @@
         </li>
           
       </ul>
-      <div class="sort">
-        <b>Sort : </b>
-        <select name="sort" style="height:50px; width:250px;">
-            <option value="">--Select--</option>
-            <option value="priceasc"  >Price : Low to High</option>
-            <option value="pricedesc"  >Price : High to Low</option>
-            <option value="letterasc"  >Letter : A to Z</option>
-            <option value="letterdesc"  >Letter : Z to A</option>
-        </select>
+      <div class="filtr">
+        <b>Filter by price : </b>
+        <a href="#" class="fill" data-filter="all">All</a>
+        <a href="#" class="fill" data-filter="two">100-300</a>
+        <a href="#" class="fill" data-filter="three">300-500</a>
+        <a href="#" class="fill" data-filter="five">500-1200 </a>
               </div>
 <h1><b>Fiction : </b></h1>
 <div class="book1">
-<div class="book">
+<div class="book three">
     <img src="next in line.jpg" alt="..." width="200px" height="300px">
     <br><h3>Next in Line</h3>
     <span class="rupee">&#8377;389</span>
     <span class="rupee1">499</span>
+    
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="it starts with us.webp" alt="..." width="200px" height="300px">
     <br><h3>It Starts with Us</h3>
     <span class="rupee">&#8377;489</span>
     <span class="rupee1">699</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
-    <span class="rupee1">1679</span></h3>
+    <span class="rupee1">1679</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="lanka.jpeg" alt="..." width="200px" height="300px">
     <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="shiva trilogy.jpg" alt="..."width="200px" height="300px">
     <br><h3>The shivas trilogy Boxset of 3 books</h3>
     <span class="rupee">&#8377;932</span>
     <span class="rupee1">1295</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="wrong place.webp"  alt="..." width="200px" height="300px">
     <br><h3>Wrong Place wrong time</h3>
     <span class="rupee">&#8377;299</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
     <br><h3>Next in Line</h3>
     <span class="rupee">&#8377;389</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="finding ashly.webp" alt="..." width="200px" height="300px">
     <br><h3>Finding Ashley</h3>
     <span class="rupee">&#8377;383</span>
     <span class="rupee1">525</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="suns.jpg" alt="..." width="200px" height="300px">
     <br><h3>A Thousand splendid suns</h3>
     <span class="rupee">&#8377;388</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
     <br><h3>It ends with us</h3>
     <span class="rupee">&#8377;379</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div> <center> <button class="btn btn-outline-danger view"> view more</button></center>
-  <div class="book h">
+  <div class="book h five">
     <img src="red.webp"  alt="..." width="200px" height="300px">
     <br><h3>Red,white and royal blue</h3>
     <span class="rupee">&#8377;589</span>
     <span class="rupee1">899</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="diary.webp" alt="..." width="200px" height="300px">
     <br><h3>Diary of a wimpy kid book 17</h3>
     <span class="rupee">&#8377;350</span>
     <span class="rupee1">550</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h five">
     <img src="light touches.webp"  alt="..." width="200px" height="300px">
     <br><h3>Everything the light touches</h3>
     <span class="rupee">&#8377;649</span>
     <span class="rupee1">799</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="samsara.webp" alt="..." width="200px" height="300px">
     <br><h3>Samsara: Enter the Valley of the Gods ("India's answer to Harry Potter")</h3>
     <span class="rupee">&#8377;170</span>
     <span class="rupee1">250</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h five">
     <img src="kingdom.webp" alt="..."width="200px" height="300px">
     <br><h3>Kingdom of the Cursed (Kingdom of the Wicked)</h3>
     <span class="rupee">&#8377;568</span>
     <span class="rupee1">699</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
   </div>
   <div class="ad">
     <h2><b>For Suggestions click the link given:</b></h2>
-    <button class="btn1 btn btn-outline-danger" onclick="openForm()">Button</button>
+    <button class="btn1 btn btn-outline-danger open">Button</button>
   </div>
-  <div class="form-popup" id="myForm">
+  <div class="form-popup popup" id="myForm">
     <form  class="form-container">
       <h2>Suggestions:</h2>
       <br>
@@ -168,7 +181,7 @@
       <input type="text" placeholder="Enter name" name="auther" required>
       <br><br>
       <button type="submit" class="btn btn-outline-danger " >Submit</button>
-      <button type="button" class="btn btn-outline-danger " onclick="closeForm()">Cancel</button>
+      <button type="button" class="btn btn-outline-danger close" >Cancel</button>
     </form>
   </div>
   
@@ -184,32 +197,8 @@
       <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
     </footer>
   </div>
-  <script>
-   $(document).ready(function () {
- 
- $(".open").click(function () {
-  $(".popup").fadeIn(500);
-});
 
-$(".close").click(function () {
-  $(".popup").fadeOut(500);
-  
-});
-});
-$(document).ready(function(){
-            $("form").submit(function(){
-                alert("your response is recorded");
-            });
-        });
-  </script>
-  <script>
-    $(document).ready(function(){
-  $(".h").hide();
-  $(".view").click(function(){
-    $(".h").show();
-    $(this).hide();
-  })
-});
-  </script>
 </body>
+
+<script src="java.js" crossorigin="anonymous"></script>
 </html>
