--- a/non-fiction.html
+++ b/non-fiction.html
@@ -50,114 +50,126 @@
         </li>
           
       </ul>
-      <div class="sort">
-        <b>Sort : </b>
-        <select name="sort" style="height:50px; width:250px;" >
-            <option value="">--Select--</option>
-            <option value="priceasc"  >Price : Low to High</option>
-            <option value="pricedesc"  >Price : High to Low</option>
-            <option value="letterasc"  >Letter : A to Z</option>
-            <option value="letterdesc"  >Letter : Z to A</option>
-        </select>
+      <div class="filtr">
+        <b>Filter by price : </b>
+        <a href="#" class="fill" data-filter="all">All</a>
+        <a href="#" class="fill" data-filter="two">100-300</a>
+        <a href="#" class="fill" data-filter="three">300-500</a>
+        <a href="#" class="fill" data-filter="five">500-1200 </a>
               </div>
 <h1><b>Non-Fiction : </b></h1>
 <div class="book1" >
-<div class="book">
+<div class="book two">
   <img src="life changing quotes.jpg"  alt="..." width="200px" height="300px">
   <br><h3>Life Changing Quotes</h3>
   <span class="rupee">&#8377;284</span>
   <span class="rupee1">299</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
+  <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="destiny.jpg" alt="..."width="200px" height="300px">
   <br><h3>Discipline is destiny</h3>
     <span class="rupee">&#8377;467</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="do hard things first.webp" alt="..."width="200px" height="300px">
     <br><h3>Do the hard things first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book two">
     <img src="profit first.webp" alt="..." width="200px" height="300px">
     <br><h3>Profit first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="inside.webp"  alt="..." width="200px" height="300px">
     <br><h3>Inside out</h3>
     <span class="rupee">&#8377;482</span>
     <span class="rupee1">699</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="wisdom.webp" alt="..."width="200px" height="300px">
     <br><h3>The wisdom Bridge</h3>
     <span class="rupee">&#8377;309</span>
     <span class="rupee1">399</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book five">
     <img src="atomic habits.jpg" alt="..." width="200px" height="300px">
   <br><h3>Atomic Habits</h3>
     <span class="rupee">&#8377;559</span>
     <span class="rupee1">799</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
     <br><h3>Ikigai</h3>
       <span class="rupee">&#8377;385</span>
       <span class="rupee1">550</span>
+      <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book">
+  <div class="book three">
     <img src="unfinished.webp" alt="..." width="200px" height="300px">
     <br><h3>Unfinished</h3>
       <span class="rupee">&#8377;489</span>
       <span class="rupee1">699</span>
+      <div class="addcart"><a >Add to Cart</a></div>
   </div> <center> <button class="btn btn-outline-danger view"> view more</button></center>
-  <div class="book h">
+  <div class="book h three">
     <img src="dad.webp" alt="..."width="200px" height="300px">
   <br><h3>Rich dad poor dad</h3>
     <span class="rupee">&#8377;419</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h three">
     <img src="milleninnials.webp" alt="..." width="200px" height="300px">
     <br><h3>What Millennials Want</h3>
     <span class="rupee">&#8377;390</span>
     <span class="rupee1">599</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="mountain.webp"  alt="..." width="200px" height="300px">
     <br><h3>The mountain is you</h3>
     <span class="rupee">&#8377;169</span>
     <span class="rupee1">499</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="hooked.webp" alt="..." width="200px" height="300px">
     <br><h3>Hooked: How to Build Habit-Forming Products</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">359</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
-  <div class="book h">
+  <div class="book h two">
     <img src="elon.webp" alt="..."width="200px" height="300px">
     <br><h3>Elon Musk: How the Billionaire CEO of SpaceX and Tesla is Shaping our Future</h3>
     <span class="rupee">&#8377;199</span>
     <span class="rupee1">349</span>
+    <div class="addcart"><a >Add to Cart</a></div>
   </div>
   </div>
   <div class="ad">
     <h2><b>For Suggestions click the link given:</b></h2>
-    <button class="btn1 btn btn-outline-danger" onclick="openForm()">Button</button>
+    <button class="btn1 btn btn-outline-danger open">Button</button>
   </div>
-  <div class="form-popup" id="myForm">
+  <div class="form-popup popup" id="myForm">
     <form  class="form-container">
       <h2>Suggestions:</h2>
       <br>
@@ -168,7 +180,7 @@
       <input type="text" placeholder="Enter name" name="auther" required>
       <br><br>
       <button type="submit" class="btn btn-outline-danger " >Submit</button>
-      <button type="button" class="btn btn-outline-danger " onclick="closeForm()">Cancel</button>
+      <button type="button" class="btn btn-outline-danger close" >Cancel</button>
     </form>
   </div>
   
@@ -184,34 +196,8 @@
       <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
     </footer>
   </div>
-  <script>
-   $(document).ready(function () {
- 
- $(".open").click(function () {
-  $(".popup").fadeIn(500);
-});
 
-$(".close").click(function () {
-  $(".popup").fadeOut(500);
-  
-});
-});
-$(document).ready(function(){
-            $("form").submit(function(){
-                alert("your response is recorded");
-            });
-        });
-  </script>
-  <script>
-     $(document).ready(function(){
-  $(".h").hide();
-  $(".view").click(function(){
-    $(".h").show();
-    $(this).hide();
-  })
-});
-
-
-  </script>
 </body>
+
+<script src="java.js" crossorigin="anonymous"></script>
 </html>
