--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
       <a class="nav-link" href="bestseller.html">Bestsellers</a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Fiction/Non-Fiction</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="fiction.html">Fiction</a></li>
         <li><hr class="dropdown-divider"></li>
