--- a/bestseller.html
+++ b/bestseller.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar logo">
         <div class="container-fluid">
-          <a class="navbar-brand"><img src="logo.png" id="logo"></a>
+          <a class="navbar-brand"><img src="New folder/logo.png" id="logo"></a>
           <form class="d-flex" role="search">
             <input class="form-control me-4" type="search" placeholder="Search" aria-label="Search"">
             <button class="btn btn-outline-danger" type="submit">Search</button>
