--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <body id="blur">
   <nav class="navbar logo" >
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html"><img src="logo.png" id="logo"></a>
+      <a class="navbar-brand" href="home.html"><img src="New folder/logo.png" id="logo"></a>
       <form class="d-flex" role="search" id="search">
         <input class="form-control me-4" id="txtsearch" type="search" placeholder="Search" aria-label="Search" autocomplete="on">
         <button class="btn btn-outline-danger" type="submit">Search</button>
