--- a/bestseller.html
+++ b/bestseller.html
@@ -60,70 +60,70 @@
 <h1 ><b>Bestseller : </b></h1>
 <div class="book1">
 <div class="book five">
-  <img src="atomic habits.jpg" alt="..." width="200px" height="300px">
+  <img src="New folder/atomic habits.jpg" alt="..." width="200px" height="300px">
   <br><h3>Atomic habits</h3>
     <span class="rupee">&#8377;559</span>
     <span class="rupee1">799</span>
     <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
+  <img src="New folder/it ends with us.jpeg" alt="..." width="200px" height="300px">
   <br><h3>it ends with us</h3>
     <span class="rupee">&#8377;379</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
+  <img src="New folder/ikigai.jpeg"  alt="..." width="200px" height="300px">
   <br><h3>ikigai</h3>
     <span class="rupee">&#8377;385</span>
     <span class="rupee1">550</span>
     <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="dad.webp" alt="..." width="200px" height="300px">
+  <img src="New folder/dad.webp" alt="..." width="200px" height="300px">
   <br><h3>Rich dad poor dad</h3>
     <span class="rupee">&#8377;419</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="destiny.jpg " alt="..."width="200px" height="300px">
+  <img src="New folder/destiny.jpg " alt="..."width="200px" height="300px">
   <br><h3>Discipline is destiny</h3>
     <span class="rupee">&#8377;467</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
 </div>
   <div class="book two">
-    <img src="mountain.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/mountain.webp"  alt="..." width="200px" height="300px">
     <br><h3>The mountain is you</h3>
     <span class="rupee">&#8377;169</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
+    <img src="New folder/do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="it starts with us.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/it starts with us.webp" alt="..." width="200px" height="300px">
     <br><h3>It Starts with Us</h3>
     <span class="rupee">&#8377;489</span>
     <span class="rupee1">699</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="hooked.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/hooked.webp" alt="..." width="200px" height="300px">
     <br><h3>Hooked: How to Build Habit-Forming Products</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">359</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
     <span class="rupee1">1679</span>
@@ -133,35 +133,35 @@
    <center> <button class="btn btn-outline-danger view"> view more</button></center>
   
   <div class="book h three">
-    <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
+    <img src="New folder/ikigai.jpeg"  alt="..." width="200px" height="300px">
     <br><h3>Ikigai</h3>
       <span class="rupee">&#8377;385</span>
       <span class="rupee1">550</span>
       <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="lanka.jpeg" alt="..." width="200px" height="300px">
+    <img src="New folder/lanka.jpeg" alt="..." width="200px" height="300px">
     <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="money.jpg"  alt="..." width="200px" height="300px">
+    <img src="New folder/money.jpg"  alt="..." width="200px" height="300px">
     <br><h3>The psychology of money</h3>
     <span class="rupee">&#8377;219</span>
     <span class="rupee1">399</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="alchemist.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/alchemist.jpg" alt="..." width="200px" height="300px">
     <br><h3>The alchemist</h3>
     <span class="rupee">&#8377;259</span>
     <span class="rupee1">399</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="monk.jpg" alt="..."width="200px" height="300px">
+    <img src="New folder/monk.jpg" alt="..."width="200px" height="300px">
     <br><h3>Think like a monk</h3>
     <span class="rupee">&#8377;329</span>
     <span class="rupee1">499</span>
