--- a/fiction.html
+++ b/fiction.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar logo">
         <div class="container-fluid">
-          <a class="navbar-brand"><img src="logo.png" id="logo"></a>
+          <a class="navbar-brand"><img src="New folder/logo.png" id="logo"></a>
           <form class="d-flex" role="search">
             <input class="form-control me-4" type="search" placeholder="Search" aria-label="Search"">
             <button class="btn btn-outline-danger" type="submit">Search</button>
@@ -60,7 +60,7 @@
 <h1><b>Fiction : </b></h1>
 <div class="book1">
 <div class="book three">
-    <img src="next in line.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/next in line.jpg" alt="..." width="200px" height="300px">
     <br><h3>Next in Line</h3>
     <span class="rupee">&#8377;389</span>
     <span class="rupee1">499</span>
@@ -68,98 +68,98 @@
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="it starts with us.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/it starts with us.webp" alt="..." width="200px" height="300px">
     <br><h3>It Starts with Us</h3>
     <span class="rupee">&#8377;489</span>
     <span class="rupee1">699</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
     <span class="rupee1">1679</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="lanka.jpeg" alt="..." width="200px" height="300px">
+    <img src="New folder/lanka.jpeg" alt="..." width="200px" height="300px">
     <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="shiva trilogy.jpg" alt="..."width="200px" height="300px">
+    <img src="New folder/shiva trilogy.jpg" alt="..."width="200px" height="300px">
     <br><h3>The shivas trilogy Boxset of 3 books</h3>
     <span class="rupee">&#8377;932</span>
     <span class="rupee1">1295</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="wrong place.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/wrong place.webp"  alt="..." width="200px" height="300px">
     <br><h3>Wrong Place wrong time</h3>
     <span class="rupee">&#8377;299</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
+    <img src="New folder/it ends with us.jpeg" alt="..." width="200px" height="300px">
     <br><h3>Next in Line</h3>
     <span class="rupee">&#8377;389</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="finding ashly.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/finding ashly.webp" alt="..." width="200px" height="300px">
     <br><h3>Finding Ashley</h3>
     <span class="rupee">&#8377;383</span>
     <span class="rupee1">525</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="suns.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/suns.jpg" alt="..." width="200px" height="300px">
     <br><h3>A Thousand splendid suns</h3>
     <span class="rupee">&#8377;388</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="it ends with us.jpeg" alt="..." width="200px" height="300px">
+    <img src="New folder/it ends with us.jpeg" alt="..." width="200px" height="300px">
     <br><h3>It ends with us</h3>
     <span class="rupee">&#8377;379</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div> <center> <button class="btn btn-outline-danger view"> view more</button></center>
   <div class="book h five">
-    <img src="red.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/red.webp"  alt="..." width="200px" height="300px">
     <br><h3>Red,white and royal blue</h3>
     <span class="rupee">&#8377;589</span>
     <span class="rupee1">899</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="diary.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/diary.webp" alt="..." width="200px" height="300px">
     <br><h3>Diary of a wimpy kid book 17</h3>
     <span class="rupee">&#8377;350</span>
     <span class="rupee1">550</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h five">
-    <img src="light touches.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/light touches.webp"  alt="..." width="200px" height="300px">
     <br><h3>Everything the light touches</h3>
     <span class="rupee">&#8377;649</span>
     <span class="rupee1">799</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="samsara.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/samsara.webp" alt="..." width="200px" height="300px">
     <br><h3>Samsara: Enter the Valley of the Gods ("India's answer to Harry Potter")</h3>
     <span class="rupee">&#8377;170</span>
     <span class="rupee1">250</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h five">
-    <img src="kingdom.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/kingdom.webp" alt="..."width="200px" height="300px">
     <br><h3>Kingdom of the Cursed (Kingdom of the Wicked)</h3>
     <span class="rupee">&#8377;568</span>
     <span class="rupee1">699</span>
