--- a/new arrivals.html
+++ b/new arrivals.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar logo">
         <div class="container-fluid">
-          <a class="navbar-brand"><img src="logo.png" id="logo"></a>
+          <a class="navbar-brand"><img src="New folder/logo.png" id="logo"></a>
           <form class="d-flex" role="search">
             <input class="form-control me-4" type="search" placeholder="Search" aria-label="Search"">
             <button class="btn btn-outline-danger" type="submit">Search</button>
@@ -59,70 +59,70 @@
 <h1><b>New Arrivals : </b></h1>
 <div class="book1">
 <div class="book three">
-  <img src="next in line.jpg" alt="..." width="200px" height="300px">
+  <img src="New folder/next in line.jpg" alt="..." width="200px" height="300px">
   <br><h3>Next in Line</h3>
   <span class="rupee">&#8377;389</span>
   <span class="rupee1">499</span>
   <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="it starts with us.webp" alt="..." width="200px" height="300px">
+  <img src="New folder/it starts with us.webp" alt="..." width="200px" height="300px">
   <br><h3>It Starts with Us</h3>
   <span class="rupee">&#8377;489</span>
   <span class="rupee1">699</span>
   <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book two">
-  <img src="life changing quotes.jpg"  alt="..." width="200px" height="300px">
+  <img src="New folder/life changing quotes.jpg"  alt="..." width="200px" height="300px">
   <br><h3>Life Changing Quotes</h3>
   <span class="rupee">&#8377;284</span>
   <span class="rupee1">299</span>
   <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book three">
-  <img src="lanka.jpeg" alt="..." width="200px" height="300px">
+  <img src="New folder/lanka.jpeg" alt="..." width="200px" height="300px">
   <br><h3>War of Lanka</h3>
   <span class="rupee">&#8377;349</span>
   <span class="rupee1">499</span>
   <div class="addcart"><a >Add to Cart</a></div>
 </div>
 <div class="book two">
-  <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
+  <img src="New folder/do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="ram chandra series.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/ram chandra series.jpg" alt="..." width="200px" height="300px">
     <br><h3>Ram Chandra series Boxset of 4 books</h3>
     <span class="rupee">&#8377;1186</span>
     <span class="rupee1">1679</span></h3>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="shiva trilogy.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/shiva trilogy.jpg" alt="..." width="200px" height="300px">
     <br><h3>The shivas trilogy Boxset of 3 books</h3>
     <span class="rupee">&#8377;932</span>
     <span class="rupee1">1295</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="wrong place.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/wrong place.webp"  alt="..." width="200px" height="300px">
     <br><h3>Wrong Place wrong time</h3>
     <span class="rupee">&#8377;299</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="random.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/random.webp" alt="..." width="200px" height="300px">
     <br><h3>A random walk down wall street</h3>
     <span class="rupee">&#8377;437</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="do hard things first.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/do hard things first.webp" alt="..."width="200px" height="300px">
     <br><h3>Do the hard things first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
@@ -130,35 +130,35 @@
   </div>
   <center> <button class="btn btn-outline-danger view"> view more</button></center>
   <div class="book h 200">
-    <img src="profit first.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/profit first.webp" alt="..." width="200px" height="300px">
     <br><h3>Profit first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="finding ashly.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/finding ashly.webp" alt="..." width="200px" height="300px">
     <br><h3>Finding Ashley</h3>
     <span class="rupee">&#8377;383</span>
     <span class="rupee1">525</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="inside.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/inside.webp"  alt="..." width="200px" height="300px">
     <br><h3>Inside out</h3>
     <span class="rupee">&#8377;482</span>
     <span class="rupee1">699</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="diary.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/diary.webp" alt="..." width="200px" height="300px">
     <br><h3>Diary of a wimpy kid book 17</h3>
     <span class="rupee">&#8377;350</span>
     <span class="rupee1">550</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="wisdom.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/wisdom.webp" alt="..."width="200px" height="300px">
     <br><h3>The wisdom Bridge</h3>
     <span class="rupee">&#8377;309</span>
     <span class="rupee1">399</span>
