--- a/non-fiction.html
+++ b/non-fiction.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar logo">
         <div class="container-fluid">
-          <a class="navbar-brand"><img src="logo.png" id="logo"></a>
+          <a class="navbar-brand"><img src="New folder/logo.png" id="logo"></a>
           <form class="d-flex" role="search">
             <input class="form-control me-4" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-danger" type="submit">Search</button>
@@ -60,105 +60,105 @@
 <h1><b>Non-Fiction : </b></h1>
 <div class="book1" >
 <div class="book two">
-  <img src="life changing quotes.jpg"  alt="..." width="200px" height="300px">
+  <img src="New folder/life changing quotes.jpg"  alt="..." width="200px" height="300px">
   <br><h3>Life Changing Quotes</h3>
   <span class="rupee">&#8377;284</span>
   <span class="rupee1">299</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="do epic shit.jpeg" alt="..."width="200px" height="300px">
+    <img src="New folder/do epic shit.jpeg" alt="..."width="200px" height="300px">
   <br><h3>Do Epic Shit</h3>
   <span class="rupee">&#8377;299</span>
   <span class="rupee1">399</span>
   <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="destiny.jpg" alt="..."width="200px" height="300px">
+    <img src="New folder/destiny.jpg" alt="..."width="200px" height="300px">
   <br><h3>Discipline is destiny</h3>
     <span class="rupee">&#8377;467</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="do hard things first.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/do hard things first.webp" alt="..."width="200px" height="300px">
     <br><h3>Do the hard things first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book two">
-    <img src="profit first.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/profit first.webp" alt="..." width="200px" height="300px">
     <br><h3>Profit first</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="inside.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/inside.webp"  alt="..." width="200px" height="300px">
     <br><h3>Inside out</h3>
     <span class="rupee">&#8377;482</span>
     <span class="rupee1">699</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="wisdom.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/wisdom.webp" alt="..."width="200px" height="300px">
     <br><h3>The wisdom Bridge</h3>
     <span class="rupee">&#8377;309</span>
     <span class="rupee1">399</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book five">
-    <img src="atomic habits.jpg" alt="..." width="200px" height="300px">
+    <img src="New folder/atomic habits.jpg" alt="..." width="200px" height="300px">
   <br><h3>Atomic Habits</h3>
     <span class="rupee">&#8377;559</span>
     <span class="rupee1">799</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="ikigai.jpeg"  alt="..." width="200px" height="300px">
+    <img src="New folder/ikigai.jpeg"  alt="..." width="200px" height="300px">
     <br><h3>Ikigai</h3>
       <span class="rupee">&#8377;385</span>
       <span class="rupee1">550</span>
       <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book three">
-    <img src="unfinished.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/unfinished.webp" alt="..." width="200px" height="300px">
     <br><h3>Unfinished</h3>
       <span class="rupee">&#8377;489</span>
       <span class="rupee1">699</span>
       <div class="addcart"><a >Add to Cart</a></div>
   </div> <center> <button class="btn btn-outline-danger view"> view more</button></center>
   <div class="book h three">
-    <img src="dad.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/dad.webp" alt="..."width="200px" height="300px">
   <br><h3>Rich dad poor dad</h3>
     <span class="rupee">&#8377;419</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h three">
-    <img src="milleninnials.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/milleninnials.webp" alt="..." width="200px" height="300px">
     <br><h3>What Millennials Want</h3>
     <span class="rupee">&#8377;390</span>
     <span class="rupee1">599</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="mountain.webp"  alt="..." width="200px" height="300px">
+    <img src="New folder/mountain.webp"  alt="..." width="200px" height="300px">
     <br><h3>The mountain is you</h3>
     <span class="rupee">&#8377;169</span>
     <span class="rupee1">499</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="hooked.webp" alt="..." width="200px" height="300px">
+    <img src="New folder/hooked.webp" alt="..." width="200px" height="300px">
     <br><h3>Hooked: How to Build Habit-Forming Products</h3>
     <span class="rupee">&#8377;279</span>
     <span class="rupee1">359</span>
     <div class="addcart"><a >Add to Cart</a></div>
   </div>
   <div class="book h two">
-    <img src="elon.webp" alt="..."width="200px" height="300px">
+    <img src="New folder/elon.webp" alt="..."width="200px" height="300px">
     <br><h3>Elon Musk: How the Billionaire CEO of SpaceX and Tesla is Shaping our Future</h3>
     <span class="rupee">&#8377;199</span>
     <span class="rupee1">349</span>
